change serialize function and refactor

--- a/Runtime/ComponentBind.asmdef
+++ b/Runtime/ComponentBind.asmdef
@@ -2,7 +2,8 @@
     "name": "ComponentBind",
     "rootNamespace": "ComponentBind",
     "references": [
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "com.upscalebaby.generic-serializable-dictionary"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
